2_deployments/basic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-app-svc
spec:
  selector:
    app: basic-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
