2_deployments/basic/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-app-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: <your-domain/example def.sigmd.com>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: basic-app-svc
                port:
                  number: 80
